<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.InfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/common_padding_min">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/common_padding_default">

                <TextView
                    android:id="@+id/tvInfoTittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="@dimen/common_padding_min"
                    android:text="@string/info_title"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="20sp"
                    tools:text="Product's name" />

                <TextView
                    android:id="@+id/tvInfoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="@dimen/common_padding_min"
                    android:text="@string/info_name"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="24sp"
                    tools:text="Price of product" />

                <TextView
                    android:id="@+id/tvInfoDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:padding="@dimen/common_padding_min"
                    android:text="@string/info_description"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="18sp"
                    tools:text="Price of product" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>